[package]
name = "bbs_server"
version = "0.1.0"
edition = "2018"

# Define the main server binary
[[bin]]
name = "bbs_server"
path = "src/main.rs"

# Define the test client binary
[[bin]]
name = "test_client"
path = "src/test_client.rs"

[dependencies]
# Enable `serde` support for `uuid`
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde_json = "1.0.32"
url = "2.2"  
tungstenite = "0.24"